// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Route /> should create new instance when notified 1`] = `
<Route
  component={[Function]}
  path="category/:id"
>
  <div
    data-route-path="category/:id"
  >
    <RouteContent
      key="123"
      params={
        Object {
          "id": 123,
        }
      }
      path="category/:id"
      setComponentRef={[Function]}
      setRef={[Function]}
    >
      <div>
        <MockComponent
          params={
            Object {
              "id": 123,
            }
          }
          path="category/:id"
        />
      </div>
    </RouteContent>
  </div>
</Route>
`;

exports[`<Route /> should keep two components when going forward 1`] = `
<Route
  component={[Function]}
  path="category/:id"
>
  <div
    data-route-path="category/:id"
  >
    <RouteContent
      key="123"
      params={
        Object {
          "id": 123,
        }
      }
      path="category/:id"
      setComponentRef={[Function]}
      setRef={[Function]}
    >
      <div>
        <MockComponent
          params={
            Object {
              "id": 123,
            }
          }
          path="category/:id"
        />
      </div>
    </RouteContent>
    <RouteContent
      key="456"
      params={
        Object {
          "id": 456,
        }
      }
      path="category/:id"
      setComponentRef={[Function]}
      setRef={[Function]}
    >
      <div>
        <MockComponent
          params={
            Object {
              "id": 456,
            }
          }
          path="category/:id"
        />
      </div>
    </RouteContent>
  </div>
</Route>
`;

exports[`<Route /> should register with Router in context 1`] = `
<Route
  component={[Function]}
  path="category/:id"
>
  <div
    data-route-path="category/:id"
  />
</Route>
`;

exports[`<Route /> should remove route instance when going back 1`] = `
<Route
  component={[Function]}
  path="category/:id"
>
  <div
    data-route-path="category/:id"
  >
    <RouteContent
      key="456"
      params={
        Object {
          "id": 456,
        }
      }
      path="category/:id"
      setComponentRef={[Function]}
      setRef={[Function]}
    >
      <div>
        <MockComponent
          params={
            Object {
              "id": 456,
            }
          }
          path="category/:id"
        />
      </div>
    </RouteContent>
  </div>
</Route>
`;
